@@ -1,6 +1,8 @@
 bzr-builddeb (2.0.1) UNRELEASED; urgency=low
 
-  * 
+  * Fix retrieval of the upstream source from a watch file of the archive.
+    - It would download to the specified tarball directory, but then
+      report it as stored in the compatibility directory.
 
  -- James Westby <james.westby@canonical.com>  Thu, 28 Aug 2008 11:41:35 +0100
 
